syntax = "proto3";

package pb;

option go_package = "github.com/pawaspy/simple_bank/pb"

import "google/protobub/timestamp.proto";

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protbuf.Timestamp password_changed_at = 4;
    google.protbuf.Timestamp created_at = 5;
}